# apex-platform

./: .env.example  .gitignore  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  frontend.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_crm_core.py  0003_communications.py  0004_ai_layer.py  0005_attribution.py  0006_workflows.py  0007_intelligence.py  0008_payments_netsuite.py  0009_productization.py
app/: __init__.py  config.py  database.py  dependencies.py  main.py
app/agents/: __init__.py  base.py  call_summarizer.py  lead_scorer.py  objection_handler.py  outbound_drafter.py  pipeline_forecaster.py  reply_drafter.py
app/middleware/: __init__.py  plan_enforcement.py  rbac.py  workspace.py
app/models/: __init__.py  activity.py  agent_run.py  ai_draft.py  api_key.py  assignment_rule.py  attribution.py  base.py  call.py  company.py  contact.py  dashboard_metric_cache.py  deal.py  email_account.py  enum_helpers.py  form_submission.py  lead.py  lead_score_history.py  message.py  msa_document.py  netsuite.py  netsuite_config.py  onboarding_checklist.py  page_view.py  partner_referral.py  payment.py  pipeline_forecast.py  pipeline_stage.py  plan.py  sequence.py  sequence_enrollment.py  sequence_step.py  sms_message.py  thread.py  user.py  visitor_session.py  workflow.py  workflow_condition.py  workflow_run.py  (+4 more)
frontend/: .env.example  .gitignore  README.md  Vercel.json  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
tests/: conftest.py  helpers.py  test_agents.py  test_api_keys.py  test_attribution.py  test_attribution_service.py  test_auth_flow.py  test_billing.py  test_calls.py  test_companies.py  test_contacts.py  test_deals.py  test_drafts.py  test_export.py  test_forecasts.py  test_health.py  test_inbox.py  test_lead_score_history.py  test_msa.py  test_netsuite.py  test_onboarding.py  test_payments.py  test_pipeline_stages.py  test_plan_enforcement.py  test_rbac.py  test_reports.py  test_sequences.py  test_sla.py  test_sms.py  test_stripe_webhook.py  test_tracking.py  test_users.py  test_webhooks_resend.py  test_webhooks_twilio.py  test_workflow_engine.py  test_workflows.py
(+137 files in other folders)
