[tool.poetry]
name = "apex-platform"
version = "0.1.0"
description = "APEX — AI-Powered CRM Platform (the Salesforce alternative for NetSuite shops)"
authors = ["APEX Team"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.115"
uvicorn = { extras = ["standard"], version = ">=0.32" }
sqlalchemy = { extras = ["asyncio"], version = ">=2.0" }
asyncpg = ">=0.30"
psycopg = { extras = ["binary"], version = ">=3.2" }
alembic = ">=1.14"
pydantic = { extras = ["email"], version = ">=2.9" }
pydantic-settings = ">=2.6"
python-jose = { extras = ["cryptography"], version = ">=3.3" }
passlib = { extras = ["bcrypt"], version = ">=1.7" }
# passlib 1.7.x is incompatible with bcrypt 4.1+ — bcrypt removed the
# `__about__.__version__` attribute that passlib's backend detection reads.
bcrypt = ">=4.0,<4.1"
redis = { extras = ["hiredis"], version = ">=5.2" }
httpx = ">=0.27"
python-multipart = ">=0.0.12"
twilio = ">=9.3"
resend = ">=2.4"
anthropic = ">=0.40"
arq = ">=0.26"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3"
pytest-asyncio = ">=0.24"
ruff = ">=0.8"
mypy = ">=1.13"
types-python-jose = ">=3.3"
types-passlib = ">=1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC", "S", "C4", "T20"]
ignore = ["S101", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]
"alembic/*" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["passlib.*", "jose.*", "twilio.*", "resend.*", "anthropic.*", "arq.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Share one event loop across the whole session so the module-level
# AsyncEngine's connection pool is not bound to a closed loop between tests.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
python_files = ["test_*.py"]
